# SITCON-CAMP-AIchallenge

./: .editorconfig  .env.example  .gitignore  README.md  main.py  prompt.txt  requirements.txt
chall/: main.py  pyproject.toml
chall/prompts/: basic_prompt_1.txt
chall1/: main.py  pyproject.toml  requirements.txt
chall1/prompts/: basic_prompt.txt
chall1/templates/: index.html
chall2/: main.py  requirements.txt
chall2/prompts/: basic_prompt.txt
chall2/static/: script.js  style.css
chall2/templates/: index.html
chall3/: main.py
chall3/static/: script.js  style.css
chall3/templates/: index.html
challen1/static/: style.css
challen2/: README.md  main.py
challen2/prompts/: basic_prompt.txt
challen2/templates/: index.html
challen3/: pyproject.toml
history/: .gitignore  package.json  pnpm-lock.yaml
history/.next/: app-build-manifest.json
history/.next/cache/: .rscinfo
history/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
history/.next/server/app/: page.js  page_client-reference-manifest.js
history/.next/server/chunks/: 25a64_next_5575d61e._.js  25a64_next_5575d61e._.js.map  25a64_next_a5fc29d8._.js.map  [root-of-the-server]__48b32c58._.js.map  (+2 more)
history/src/app/: page.tsx
panel/: data.json  database.db  main.py  pyproject.toml  requirements.txt
panel/templates/: admin_login.html  challenge.html  index.html  leaderboard.html  success.html
prompts/: basic_prompt.txt
static/: script.js  style.css
templates/: index.html
(+57 files in other folders)
